# ai-insights

./: .gitattributes  .gitignore  .mcp.dist.json  AGENTS.md  CLAUDE.md  README.md  changelog.md  context.yaml  menu.cmd  menu.sh  package-lock.json  package.json  sync-personas.js  vitest.config.ts
.context/: README.md  agents.md  generated-at.txt  project-manifest.md  scripts.md  shared-manifest.md  workspace-structure.md
.githooks/: pre-commit
discussions/: 2026-02-26-ui-agentic-techniques.md  2026-04-08-subagents-manifest-key-design.md  loading-mcp-tools-explained.md  (+1 more)
orchestrator/: .env.example  .gitignore  README.md  _test_config.py  changelog.md  module-context.yaml  pyproject.toml  requirements.txt  run.sh
orchestrator/ai_insights_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
orchestrator/docs/: architecture.md  jsonl-log-schema.md  public-api.md  smoke-testing.md  supervisor-routing.md
orchestrator/docs/agents/project-manifest/: README.md  api-surface.md  constraints.md  data-flows.md  file-tree.md  tech-stack.md
orchestrator/src/: __init__.py  cli.py  config.py  graph.py  mcp_client.py  state.py  supervisor.py
orchestrator/src/nodes/: __init__.py  developer.py  docs.py  pm.py  prompt_renderer.py  qa.py  release_engineer.py  reviewer.py  security_auditor.py  synthesis.py
orchestrator/src/nodes/templates/: VARIABLES.md  developer.md  pm.md  qa.md  release_engineer.md  synthesis.md
orchestrator/src/nodes/templates/partials/: begin-work-developer.md  pm-preamble.md  project-path-reminder.md  scope-restriction.md  wp-scope-reminder.md
orchestrator/src/utils/: __init__.py  _revision.py  chunk_writer.py  dialogue_writer.py  filelock.py  logging.py  mcp_parse.py  persona.py  persona_models.py  plan_parser.py  run_queue.py  subagents.py  subprocess_encoding.py  tool_wrappers.py
orchestrator/tests/: __init__.py  conftest.py  test_chunk_writer.py  test_cli.py  test_config.py  test_dialogue_writer.py  test_error_helpers.py  test_filelock.py  test_graph.py  test_integration.py  test_logging.py  test_mcp_parse.py  test_nodes.py  test_persona_models.py  test_plan_parser.py  test_post_completion_guard.py  test_prompt_renderer.py  test_revision.py  test_run_metadata.py  test_run_queue.py  test_slug_dir.py  test_state.py  test_stream_retry.py  test_streaming_capture.py  test_subagents.py  test_subprocess_encoding.py  test_supervisor.py  test_tool_wrappers.py
(+1179 files in other folders)
